--- a/cartoon-pizza-y-frutas-website/package.json
+++ b/cartoon-pizza-y-frutas-website/package.json
@@ -2,10 +2,12 @@
   "name": "cartoon-pizza-y-frutas-website",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:4000",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.23.0",
     "bootstrap": "^5.1.3",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-rc.1",
