--- a/backend-cartoon-pizza-y-frutas-website/package.json
+++ b/backend-cartoon-pizza-y-frutas-website/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "googleapis": "^89.0.0",
+    "nodemailer": "^6.7.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.14"
