--- a/cartoon-pizza-y-frutas-website/package.json
+++ b/cartoon-pizza-y-frutas-website/package.json
@@ -14,7 +14,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
-    "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.1.9",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
