--- a/backend-cartoon-pizza-y-frutas-website/package.json
+++ b/backend-cartoon-pizza-y-frutas-website/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
     "googleapis": "^89.0.0",
     "nodemailer": "^6.7.0"
