--- a/cartoon-pizza-y-frutas-website/package.json
+++ b/cartoon-pizza-y-frutas-website/package.json
@@ -2,7 +2,7 @@
   "name": "cartoon-pizza-y-frutas-website",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:4000",
+  "proxy": "http://localhost:4000/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
